[tool.poetry]
name = "mobilex"
version = "0.0.2"
description = "USSD and SMS exchange framework"
authors = ["David Kyalo <davidmkyalo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidkyalo/python-mobilex"
documentation = "https://davidkyalo.github.io/python-mobilex"
keywords = [
    "mobilex",
    "mobile",
    "USSD",
    "SMS",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.1.1"
phonenumbers = "^8.12.51"
redis = "^4.3.4"
cachetools = {version = "^5.2.0", optional = true}


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-cov = {extras = ["toml"], version = "^3.0.0"}
pip = "^22.0.4"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.8"
mike = "^1.1.2"
coverage-conditional-plugin = "^0.5.0"
black = {version = "^22.3.0", allow-prereleases = true}
cachetools = "^5.2.0"


[tool.pytest.ini_options]
addopts = "--cov=mobilex --cov-report html --cov-config pyproject.toml"
asyncio_mode="auto"


# log_level = INFO
log_level = "DEBUG"

# Glob-style pattern(s) for matching the test modules.
python_files = "tests.py test_*.py *_test.py *_tests.py"

#Pattern for matching test classes
python_classes = "*Test *Tests *_test test_*"
python_functions = "*_test test_*"


#Test markers


[tool.coverage.run]
# Here we specify plugins for coverage to be used:
plugins = [
    "coverage_conditional_plugin"
]

[tool.coverage.coverage_conditional_plugin.rules]
# Here we specify our pragma rules:
has-mypy = "is_installed('mypy')"
no-cover = "True"