[tool.poetry]
name = "mobilex"
version = "0.0.3"
description = "USSD and SMS exchange framework"
authors = ["David Kyalo <davidmkyalo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidkyalo/python-mobilex"
documentation = "https://davidkyalo.github.io/python-mobilex"
keywords = [
    "mobilex",
    "mobile",
    "USSD",
    "SMS",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.1.1"
phonenumbers = "^8.12.51"
redis = "^4.3.4"
cachetools = {version = "^5.2.0", optional = true}


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-cov = {extras = ["toml"], version = "^3.0.0"}
pip = "^22.0.4"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.8"
mike = "^1.1.2"
black = {version = "^22.3.0", allow-prereleases = true}
cachetools = "^5.2.0"


[tool.pytest.ini_options]
addopts = "--cov=mobilex --cov-report html --cov-config pyproject.toml"
asyncio_mode="auto"
log_level = "DEBUG"
python_files = "tests.py test_*.py *_test.py *_tests.py"
python_classes = "*Test *Tests test_* *_test *_tests Test_* *_Test *_Tests"
python_functions = "*_test test_*"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if\\s+([a-zA-Z0-9_]+\\.)?TYPE_CHECKING",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/tests.py",
]